# Proyecto2GCRaycasting

./: .gitignore  CMakeLists.txt  color.h  imageLoader.h  main.cpp  raycaster.h  readme.md
SDL2/x86_64-w64-mingw32/include/SDL2/: SDL_main.h
assets/: map.txt  map2.txt  map3.txt
scripts/: imageLoader.h  main.cpp  raycaster.h
